@@ -1,7 +1,8 @@
 2003-04-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* Makefile.am (libbicpl_la_LIBADD): 
 	* tools/Makefile.am (LDADD): Remove $(BIC_LIBS), as it
-	was not defined anywhere.
+	was not defined anywhere.  Ditto $(imageio_LIBS).
 
 	* Makefile.am (libbicpl_la_LDFLAGS): Fix -version-info by
 	incrementing "current" and "age", since interfaces were added in
